feat(likec4): typed-ID graph API and LikeC4 workspace projector rewrite
Replace the stringly-typed nodesByIds(Iterable<String>) with typed graph
lookup methods (nodesByComponentIds, nodesByEntrypointIds, componentNodesOwnedBy)
so no typed-ID → String → GraphNodeId roundtrips exist in callers.

Rewrite LikeC4WorkspaceProjector without the ArchitectureViewProjector
dependency: component/entrypoint selection uses typed ComponentId and
EntrypointId throughout; internal sets are Set<GraphNodeId>; .value()
appears only at the LikeC4 document boundary (LikeC4Element, LikeC4Relationship).

Update LikeC4WorkspaceProjectorTest helpers to construct ComponentId,
EntrypointId, DependencyId, and AppId via their typed factories instead
of raw strings.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>